[package]
name = "jsx"
description = "JSX syntax extension for Rust. Very early days, this doesn't do much yet."
version = "0.1.0"
authors = ["Cam Jackson <camjackson89@gmail.com>"]
repository = "https://github.com/camjackson/jsx-rs"
readme = "README.md"
keywords = ["react", "jsx", "html", "javascript"]
license = "GPL-3.0"

[lib]
crate-type = ["dylib"]
